# JunkNoteAPI

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  python-app.yml
app/: __init__.py  main.py
app/api/dependencies/: authentication.py  database.py  memos.py
app/api/routes/: api.py  authentication.py  memos.py  users.py
app/core/: config.py  logger.py  loggertest.py  test.py
app/db/: db.py  memos.py  users.py
app/db/migrations/: env.py
app/db/migrations/versions/: 00b013324821_add_pinned_column_on_memos.py  1ae4af70a2f0_add_disabled_col.py  22a8fae18f7d_change_datetime_automatically_for_user.py  2b7fcebfede1_add_password_salt.py  649689436ad1_change_string_length.py  75c80cff56bd_first_revision.py  8ae3aeb6dafe_change_relationship.py  ae50678c2ad6_add_email_col.py  c3c6a40821a1_fix_typo.py  c4d79a532148_fix_column_name.py  d2ebabefc791_add_datetime_col.py  de3bdf5a9ff8_delete_disabled_column.py  e38020c7579a_first_revision.py  e4a3d91892ff_change_datetime_automatically.py
app/db/queries/: memos.py  users.py
app/models/: models.py  schemas.py
app/models/schemas/: base.py  memos.py  users.py
app/schemas/: schemas.py
app/services/: authentication.py  security.py
docker/app/: Dockerfile
tests/: conftest.py  test_app.py  test_memos.py  util.py
tests/models/schemas/: test_users.py
tests/services/: test_authentication.py  test_security.py
tests/test_api/test_routes/: test_authentication.py  test_memos.py  test_user.py  test_users.py
tests/test_services/: test_authentication.py  test_security.py
