[tool.poetry]
name = "junk_note_api"
version = "0.1.0"
description = ""
authors = ["shin-hama <htysivista@gmail.com>"]
license = "MIT"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.65.1"}
alembic = "^1.6.5"
PyMySQL = "^1.0.2"
cryptography = "^3.4.7"
bcrypt = "^3.2.0"
passlib = "^1.7.4"
SQLAlchemy = "^1.4.18"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
mypy = "^0.902"
pytest = "^6.2.4"
asgi-lifespan = "^1.0.1"
httpx = "^0.18.2"
docker = "^5.0.0"
types-PyMySQL = "^0.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
