[tool.poetry]
name = "junk_note_api"
version = "0.1.0"
description = ""
authors = ["shin-hama <htysivista@gmail.com>"]
license = "MIT"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.66.1"}
alembic = "^1.6.5"
PyMySQL = "^1.0.2"
SQLAlchemy = "^1.4.22"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
mypy = "^0.910"
pytest = "^6.2.4"
asgi-lifespan = "^1.0.1"
httpx = "^0.18.2"
docker = "^5.0.0"
types-PyMySQL = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
