[tool.poetry]
name = "junk_note_api"
version = "0.1.0"
description = ""
authors = ["shin-hama <htysivista@gmail.com>"]
license = "MIT"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
email-validator = "^1.1.3"
python-multipart = "^0.0.5"
alembic = "^1.7.3"
PyMySQL = "^1.0.2"
SQLAlchemy = "^1.4.25"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^4.0.1"
mypy = "^0.910"
pytest = "^6.2.5"
asgi-lifespan = "^1.0.1"
httpx = "^0.19.0"
docker = "^5.0.2"
types-PyMySQL = "^1.0.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
